# image-text-alignment

./: .gitignore  Dockerfile.api  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
hooks/: pre-commit  setup-hooks.sh
schema/: 02_input_tables.sql  02_tables.sql  03_input_table_views.sql  04_prediction_tables.sql
scripts/: check.sh  generate_input_table_schema.sh  ingest_csvs.sh  llm_product_description.py  process_all_products.py  process_single_image.py
src/: config.py  main.py
src/api/dto/: image_processing.py
src/api/routers/: base_router.py  image_processing.py
src/common/: __init__.py  clock.py  db.py  exceptions.py  image_encoding.py  read_files.py  rng.py
src/common/data_ingestion/: __init__.py  records.py  repositories.py
src/common/data_ingestion/jobs/: generate_table_schema.py  ingest_csvs.py
src/common/db/: __init__.py  async_base.py  async_session.py  base.py  engine.py  psycopg_pool.py  session.py
src/common/file_readers/: csv.py  txt.py  txt_files.py  types.py
src/common/llm/: __init__.py  client.py  embedding.py  image_processor.py  llm.py  models.py  registry.py
src/common/llm/base_classes/: base_image_processor.py  base_llm.py
src/common/llm/providers/: __init__.py  base.py
src/common/llm/providers/azure/: __init__.py  client.py  constants.py  embedding.py  embeddings.py  image_processor.py  llm.py
src/common/llm/providers/openai/: __init__.py  client.py  constants.py  embedding.py  embeddings.py  image_processor.py  llm.py
src/common/llm/utils/: __init__.py  parsing.py
src/common/logging/: __init__.py  filters.py  setup.py
src/common/logs/: __init__.py  setup.py
src/common/new_llm/: __init__.py  base_llm.py  embedding.py  image_processor.py  llm.py  registry.py
src/common/new_llm/base_classes/: __init__.py  base_embedding.py
src/common/new_llm/providers/: __init__.py
src/common/new_llm/providers/azure/: __init__.py  embedding.py  image_processor.py  llm.py
src/common/new_llm/providers/openai/: __init__.py  embedding.py  image_processor.py  llm.py
src/core/data_ingestion/: dtos.py  queries.py  records.py  repositories.py
src/core/image_encoding/: __init__.py  dtos.py  file_loader.py  filepath_mapping.py
src/core/image_text_alignment/: __init__.py  dtos.py  llm_checker.py  llm_classifier.py  llm_referee.py  prompts.py  records.py  repositories.py  service.py
src/core/image_text_alignment/prompts/: __init__.py  classifier_prompt.txt  product_image_system.txt  referee_prompt.txt  system_prompt.txt  txt_loading.py
