[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aida-facet-inference"
version = "0.1.0"
description = "A product information inference system using vector databases, LLMs and tool calling. The tool takes in product information, queries the database for similar products, searches online for the EAN if necessary, and infers missing filters/facets using this additional context."
authors = [
    {name = "James Hartley"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "fastapi>=0.100.0",
    "fastapi-cli>=0.0.7",
    "uvicorn>=0.22.0",
    "streamlit>=1.25.0",
    "openai>=1.0.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "psycopg>=3.1.8",
    "psycopg-pool>=3.1.8",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.0",
    "tqdm>=4.66.0",
    "plotly>=5.18.0",
    "backoff>=2.2.1",
    "aiohttp>=3.9.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "types-psycopg2>=2.9.9",
    "types-tqdm>=4.66.0",
    "pandas-stubs>=2.0.0",
    "types-openpyxl>=3.1.0",
    "ruff>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.psycopg2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = ["B008"]  # Ignore B008 for FastAPI's Depends

[tool.black]
line-length = 79
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true 
